--- a/2023.html
+++ b/2023.html
@@ -84,7 +84,7 @@
 
 
             <section class="semestres">
-                <span class="materialAno">Materiais 2024</span>
+                <span class="materialAno">Materiais 2023</span>
                 <h5>1º SEMESTRE</h5>
 
                 <div class="grid">
@@ -95,7 +95,19 @@
                                 <img src="imgs/introducao.png" alt="Introdução ao curso">
                                 <div class="cardtext">
                                     <h2>Introdução ao curso</h2>
-                                    <p>14 de março de 2023</p>
+                                    <p>14 de Março de 2023</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="/curso-dos-idosos/material.https://drive.google.com/file/d/1DmtBNpoBS-YOfhhVVi5h6Rau1YLp8W1t/preview">
+                            <div>
+                                <img src="imgs/meet.webp" alt="Introdução ao curso">
+                                <div class="cardtext">
+                                    <h2>Google Meet</h2>
+                                    <p>21 de Março de 2023</p>
                                 </div>
                             </div>
                         </a>
@@ -107,7 +119,7 @@
                                 <img src="imgs/gmail.webp" alt="Logo e título do Gmail">
                                 <div class="cardtext">
                                     <h2>Gmail</h2>
-                                    <p>21 de março de 2023</p>
+                                    <p>28 de Março de 2023</p>
                                 </div>
                             </div>
                         </a>
@@ -119,7 +131,7 @@
                                 <img src="imgs/docs.webp" alt="Logo e título do Documentos Google">
                                 <div class="cardtext">
                                     <h2>Documentos Google</h2>
-                                    <p>28 de março de 2023</p>
+                                    <p>04 de Abril de 2023</p>
                                 </div>
                             </div>
                         </a>
@@ -131,14 +143,14 @@
                                 <img src="imgs/receitas.png" alt="Livro de receitas.">
                                 <div class="cardtext">
                                     <h2>Criando o seu livro de receitas</h2>
-                                    <p>11 de abril de 2023</p>
+                                    <p>11 de Abril de 2023</p>
                                 </div>
                             </div>
                         </a>
                     </div>
 
                     <div class="card">
-                        <a href="/curso-dos-idosos/aulafotografia2023.html">
+                        <a href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1CnscFWDvS03kO2TnzKoqHQGu83Psx877/preview">
                             <div>
                                 <img src="imgs/fotografia.webp" alt="Desenho de uma câmera fotográfica.">
                                 <div class="cardtext">
@@ -150,16 +162,75 @@
                     </div>
 
                     <div class="card">
-                        <a href="/curso-dos-idosos/googledrive2023.html">
+                        <a href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1-8cCto4K3eHNdJve1b6gLtO6AHg0PMfD/preview">
                             <div>
                                 <img src="imgs/drive.webp" alt="Logo e título do Google Drive">
                                 <div class="cardtext">
                                     <h2>Google Drive</h2>
-                                    <p>25 de abril de 2023</p>
+                                    <p>18 de abril de 2023</p>
                                 </div>
                             </div>
                         </a>
                     </div>
+
+                    <div class="card">
+                        <a href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1s1KZPR7lDgc9W0nRir7fNGRBPw7Znc8q/preview">
+                            <div>
+                                <img src="imgs/googleplanilha.jpeg" alt="Logo e título do Google Planilhas">
+                                <div class="cardtext">
+                                    <h2>Google Planilhas</h2>
+                                    <p>25 de Abril de 2023</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1wUH3d4uqMyPuhIMm6cbihhyBOUAJPASm/preview">
+                            <div>
+                                <img src="imgs/googleapresentacoes.png" alt="Logo e título do Google Apresentações">
+                                <div class="cardtext">
+                                    <h2>Google Apresentações</h2>
+                                    <p>02 de Maio de 2023</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1UPXVQWfoXnQjjt7fDTUmRRafpMITXBdy/preview">
+                            <div>
+                                <img src="imgs/googleformularios.webp" alt="Logo e título do Google Formulários">
+                                <div class="cardtext">
+                                    <h2>Google Formulários</h2>
+                                    <p>09 de Maio de 2023</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1P-160OLTqg4OQjE8yBgoYbKPVMbujZwr/preview">
+                            <div>
+                                <img src="imgs/digitacao.jpeg" alt="Mão escrevendo em um teclado">
+                                <div class="cardtext">
+                                    <h2>Guia de Digitação</h2>
+                                    <p>16 de Maio de 2023</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1Vb0Yxd_8vw_p7I5Pom6hLb9ntNf5lp7O/preview">
+                            <div>
+                                <img src="imgs/pccomputador.jpeg" alt="Mão mexendo na placa-mãe">
+                                <div class="cardtext">
+                                    <h2>Partes do Computador</h2>
+                                    <p>23 de Maio de 2023</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
                 </div>
             </section>
 
@@ -169,48 +240,48 @@
                 <div class="grid">
 
                     <div class="card">
-                        <a href="#">
+                        <a href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1giqbJXU21P67yB_PlCAX_lb5P-6G87qE/preview">
                             <div>
-                                <img src="imgs/foto1.webp" alt="">
+                                <img src="imgs/podcast.jpeg" alt="Desenho de um microfone e o título de Podcast">
                                 <div class="cardtext">
-                                    <h2>Título da aula</h2>
-                                    <p>04 de abril de 2024</p>
+                                    <h2>Introdução ao Podcast</h2>
+                                    <p>06 de Junho de 2023</p>
                                 </div>
                             </div>
                         </a>
                     </div>
 
                     <div class="card">
-                        <a href="#">
+                        <a href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1c26VpDQdJV2kcsJYvmY3U2W4w87KYHEv/preview">
                             <div>
-                                <img src="imgs/foto2.webp" alt="">
+                                <img src="imgs/chatgpt.webp" alt="Logo e Título do ChatGPT">
                                 <div class="cardtext">
-                                    <h2>Título da aula</h2>
-                                    <p>12 de abril de 2024</p>
+                                    <h2>Chat GPT</h2>
+                                    <p>13 de Junho de 2023</p>
                                 </div>
                             </div>
                         </a>
                     </div>
 
                     <div class="card">
-                        <a href="#">
+                        <a href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1XkqI7mC4gmP1lY1XS8qcI2Gm3nD1tG9h/preview">
                             <div>
-                                <img src="imgs/foto3.webp" alt="">
+                                <img src="imgs/fotografia.webp" alt="Desenho de uma câmera fotográfica">
                                 <div class="cardtext">
-                                    <h2>Título da aula</h2>
-                                    <p>04 de abril de 2024</p>
+                                    <h2>Aula de Fotografia</h2>
+                                    <p>20 de Junho de 2023</p>
                                 </div>
                             </div>
                         </a>
                     </div>
 
                     <div class="card">
-                        <a href="#">
+                        <a href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1gmG7ZwMNL2YmqlIfpCXdaXQ4U8xBKsIM/preview">
                             <div>
-                                <img src="imgs/drive.webp" alt="">
+                                <img src="imgs/docs.webp" alt="Logo e título do Google Documentos">
                                 <div class="cardtext">
-                                    <h2>Título da aula</h2>
-                                    <p>04 de abril de 2024</p>
+                                    <h2>Google Docs para construir roteiros</h2>
+                                    <p>27 de Junho de 2023</p>
                                 </div>
                             </div>
                         </a>
