--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br"> 
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -56,7 +56,7 @@
 
     <main>
 
-        <button id="changeThemeButton" >Modo Escuro</button>
+        <button id="changeThemeButton">Modo Escuro</button>
 
         <label for="input" id="acessibilidade">
             <input type="checkbox" name="input" id="input" />
@@ -101,11 +101,12 @@
                 <div class="grid">
 
                     <div class="card">
-                        <a href="/curso-dos-idosos/material.html">
+                        <a
+                            href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1zcT5N0Gp97xkzatvpOF5kZOq2b7W9tiI/preview">
                             <div>
-                                <img src="imgs/drive.webp" alt="">
+                                <img src="imgs/organizacao.jpeg" alt="Organização">
                                 <div class="cardtext">
-                                    <h2>Título da aula</h2>
+                                    <h2>Revisão e Organização</h2>
                                     <p>04 de abril de 2024</p>
                                 </div>
                             </div>
@@ -113,11 +114,12 @@
                     </div>
 
                     <div class="card">
-                        <a href="#">
+                        <a
+                            href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1c4poU16YPBA-Pc-XmXem7FvE4UPUtxvN/preview">
                             <div>
-                                <img src="imgs/meet.webp" alt="">
+                                <img src="imgs/drive.webp" alt="Logo e título do Google Drive">
                                 <div class="cardtext">
-                                    <h2>Título da aula</h2>
+                                    <h2>Google Drive</h2>
                                     <p>12 de abril de 2024</p>
                                 </div>
                             </div>
@@ -125,11 +127,12 @@
                     </div>
 
                     <div class="card">
-                        <a href="#">
+                        <a
+                            href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1e3yNclpdZI-3tSYEGa1H5nlPOhNyCa89/preview">
                             <div>
-                                <img src="imgs/docs.webp" alt="">
+                                <img src="imgs/boletiminformativo.webp" alt="Desenho de uma carta">
                                 <div class="cardtext">
-                                    <h2>Título da aula</h2>
+                                    <h2>Boletim Informativo</h2>
                                     <p>04 de abril de 2024</p>
                                 </div>
                             </div>
@@ -137,11 +140,12 @@
                     </div>
 
                     <div class="card">
-                        <a href="#">
+                        <a
+                            href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/12AcM8VPhkoe9ejXuF-2I9fZXXK9grYsz/preview">
                             <div>
-                                <img src="imgs/gmail.webp" alt="">
+                                <img src="imgs/escrevendo.jpeg" alt="Mão escrevendo um livro">
                                 <div class="cardtext">
-                                    <h2>Título da aula</h2>
+                                    <h2>Livro em Construção</h2>
                                     <p>04 de abril de 2024</p>
                                 </div>
                             </div>
@@ -150,58 +154,6 @@
                 </div>
             </section>
 
-            <section class="semestres">
-                <h5>2º SEMESTRE</h5>
-                <div class="grid">
-                    <div class="card">
-                    <a href="#">
-                        <div>
-                            <img src="imgs/foto1.webp" alt="">
-                            <div class="cardtext">
-                                <h2>Título da aula</h2>
-                                <p>04 de abril de 2024</p>
-                            </div>
-                        </div>
-                    </a>
-                    </div>
-
-                    <div class="card">
-                    <a href="#">
-                        <div>
-                            <img src="imgs/foto2.webp" alt="">
-                            <div class="cardtext">
-                                <h2>Título da aula</h2>
-                                <p>12 de abril de 2024</p>
-                            </div>
-                        </div>
-                    </a>
-                    </div>
-
-                    <div class="card">
-                    <a href="#">
-                        <div>
-                            <img src="imgs/foto3.webp" alt="">
-                            <div class="cardtext">
-                                <h2>Título da aula</h2>
-                                <p>04 de abril de 2024</p>
-                            </div>
-                        </div>
-                    </a>
-                    </div>
-
-                    <div class="card">
-                    <a href="#">
-                        <div>
-                            <img src="imgs/foto4.webp" alt="">
-                            <div class="cardtext">
-                                <h2>Título da aula</h2>
-                                <p>04 de abril de 2024</p>
-                            </div>
-                        </div>
-                    </a>
-                    </div>
-                </div>
-            </section>
         </section>
     </main>
 
@@ -221,7 +173,7 @@
         <div id="content">
 
             <div id="logoFooter">
-                <img  id="footerLogo" src="imgs/Group 2.svg" alt="">
+                <img id="footerLogo" src="imgs/Group 2.svg" alt="">
             </div>
             <div id="contato">
                 <h3>Contatos:</h3>
