--- a/material.html
+++ b/material.html
@@ -53,11 +53,12 @@
     </header>
 
     <main>
-        <h2 id="materialH2">Material: xx/xx/xxxx</h2>
+        <h2 id="materialH2">Material <span id="data">
+        </span></h2>
 
         <section id="material">
             <iframe id="pdfViewer"
-            src="https://docs.google.com/viewer?srcid=1CnscFWDvS03kO2TnzKoqHQGu83Psx877&pid=explorer&efh=false&a=v&chrome=false&embedded=true"
+            src=""
         ></iframe>
         </section>
 
@@ -150,6 +151,7 @@
         var parts = window.location.search.substr(1).split("&");
         var $_GET = {};
         const pdfViewer = document.getElementById("pdfViewer");
+        const data = document.getElementById("data")
         for (var i = 0; i < parts.length; i++) {
             var temp = parts[i].split("=");
             $_GET[decodeURIComponent(temp[0])] = decodeURIComponent(
@@ -157,6 +159,7 @@
             );
         }
 
+        data.innerHTML = $_GET["data"]
         pdfViewer.src = $_GET["pdf"];
     </script>
 </body>
